--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
 
         <span class="setup-close">&times;</span>
       </div>
-
-
       <div class="setup-artifacts-shop">
         <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
         </div>
@@ -199,6 +197,7 @@
       return (height / 3) * 2;
     }
   </script>
+  <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
 </body>
